[package]
name = "synchronous-server"
version = "0.1.2"
edition = "2021"
description = "Low level synchronous server"
authors = ["Sergey Kolmiller <uyem.ru@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["http", "synchronous", "tcp"]
categories = ["network-programming"]
repository = "https://github.com/kolserdav/synchronous-server"
include = ["README.md", "LICENSE", "Cargo.toml", "/src/*.rs", "src/**/*.rs"]\
exclude = ["node_modules"]
rust-version = "1.74"

[lib]
crate-type = ["cdylib"]
name = "synchronous_server"

[dependencies]
napi = "2"
napi-derive = "2"
#proxy-server = { path = "../proxy-server", features=["napi"] }
proxy-server = { version="0.5.1", features=["napi"] }
regex = "1.10.2"
serde_json = "1.0.108"

[build-dependencies]
napi-build = "1"
