[package]
name = "synchronous-server-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "synchronous_server_node"

[dependencies]
napi = "2"
napi-derive = "2"
#synchronous-server =  { path = "../synchronous-server" }
synchronous-server =  { version = "0.1.3" }

[dependencies.proxy-server]
features = ["napi"]

[build-dependencies]
napi-build = "1"